# mimicel

./: .gitignore  BUILD.bazel  MODULE.bazel  Makefile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup_cel_protos.sh
.github/workflows/: bazel.yml
conformance/: BUILD.bazel  run_basic_test.py
examples/: BUILD.bazel  README.md  bazel_protobuf_wrapper.py  binary.py  compatibility.py  functions.py  like-a-pydantic.py  method.py  native_types.py  requirements.txt  simple.py  user.proto  user_pb2.py  user_pb2.pyi
mimicel/: BUILD.bazel  __init__.py  macro_registry_pb.py  type_registry.py
mimicel/cel_values/: well_known_types.py
mimicel/duration/: BUILD.bazel  CelDuration.g4
mimicel/joda/: BUILD.bazel  Joda.g4
mimicel/standard_definitions/: defs_internal.py  defs_operator_arithmetic.py  defs_operator_comparison.py  defs_operator_misc.py  defs_standard_functions.py  defs_type_conversion.py  helpers.py
patches/: BUILD.bazel  cel_spec_pyproto.patch
proto/: BUILD.bazel
tests/: BUILD.bazel  test_reserved_words.py
tests/legacy/: BUILD.bazel  README.md  test_duration.py  test_eval_expr.py  test_joda.py  test_messages.proto  test_messages_pb2.py  test_messages_pb2.pyi  test_protobuf_integration.py  test_type_registry.py  test_wkt.py  test_wkt_value_extended.py
tools/: pywheel_gen.py
tools/astdump/: .gitignore  BUILD.bazel  README.md  go.mod  main.go
tools/pywheel_gen/: BUILD.bazel  README.md  pywheel_gen.py  requirements.txt
